# sudoku-resolve

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Util.cmake  vcpkg.json
assets/: test_in.text
src/: main_sudoku_cmd.cpp  main_sudoku_ocr.cpp  main_sudoku_test.cpp
src/sudoku/: alg.cpp  alg.hpp  common.cpp  common.hpp  ocr.cpp  ocr.hpp  text.cpp  text.hpp  time.cpp  time.hpp  view.cpp  view.hpp
